# NeuroQuantumDB

./: .dockerignore  .gitignore  .release-please-manifest.json  3abc9769-dbee-4cf2-8b56-d761c55d3eb9.json  404.html  AUDIT.md  CHANGELOG.md  CNAME  Cargo.toml  Cargo.toml.clippy  Dockerfile  FINAL_VALIDATION_REPORT.md  IGNORED_TESTS_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  INDEX_ANALYSE.md  ISSUES_UND_AUFGABEN.md  Makefile  NEXT_STEPS.md  NeuroQuantumDB_System_Architecture.md  NeuroQuantumDB_Technical_Specification.md  PHASE_1_COMPLETE.md  PRODUCTION_READY_COMPLETE.md  PRODUCTION_TUNING.md  PROJEKT_ANALYSE.md  QUANTUM_IMPLEMENTATION.md  README.md  SETUP_COMMANDS.md  SIMULATION_AUDIT.md  SLOW_TESTS_ANALYSIS.md  TASK_1_1_SUMMARY.md  TASK_1_2_SUMMARY.md  TASK_1_3_SUMMARY.md  TASK_1_4_SUMMARY.md  TASK_OVERVIEW.md  TODO.md  VISUAL_ROADMAP.md  audit-prompt.md  book.toml  demo_client.py  deny.toml  (+13 more)
.cargo/: config.toml
api/: crates.js  (+4 more)
crates/neuroquantum-api/: CHANGELOG.md  Cargo.toml
crates/neuroquantum-api/examples/: authentication_flow.rs  flow_control_demo.rs  jwt_key_rotation_demo.rs  query_streaming_demo.rs  real_time_updates.rs
crates/neuroquantum-api/src/: auth.rs  biometric_auth.rs  cli.rs  config.rs  error.rs  handlers.rs  jwt.rs  lib.rs  main.rs  metrics.rs  middleware.rs  permissions.rs  proptest_suite.rs  rate_limit.rs  storage.rs  test_data.rs  tests.rs  tracing_setup.rs
crates/neuroquantum-api/tests/: api_handler_integration_tests.rs  biometric_auth_tests.rs  config_tests.rs  e2e_advanced_tests.rs  e2e_tests.rs  eeg_feature_validation_tests.rs  error_tests.rs  handlers_tests.rs  jwt_tests.rs  metrics_tests.rs  middleware_tests.rs  permissions_tests.rs  rate_limit_tests.rs  security_penetration_tests.rs  tracing_setup_tests.rs  websocket_streaming_integration_tests.rs  websocket_tests.rs
crates/neuroquantum-cluster/: CHANGELOG.md  Cargo.toml  RAFT_LOG_REPLICATION.md  build.rs
crates/neuroquantum-cluster/proto/: cluster.proto
crates/neuroquantum-cluster/src/: cluster_manager.rs  config.rs  consensus.rs  consensus_chaos_tests.rs  consensus_tests.rs  discovery.rs  error.rs  lib.rs  metrics.rs  network.rs  node.rs  replication.rs  sharding.rs  upgrade.rs
crates/neuroquantum-cluster/tests/: cluster_manager_tests.rs  config_tests.rs  consensus_tests.rs  discovery_tests.rs  metrics_tests.rs  network_tests.rs  node_tests.rs  replication_tests.rs  sharding_tests.rs  upgrade_tests.rs
crates/neuroquantum-core/: CHANGELOG.md  Cargo.toml
crates/neuroquantum-core/benches/: btree_benchmark.rs  dna_compression.rs  grover_search.rs  neon_optimization.rs  neuromorphic_index.rs  page_storage_benchmark.rs  quantum_annealing.rs  transactions.rs
crates/neuroquantum-core/examples/: buffer_pool_auto_tuning.rs  dna_compression_demo.rs  gcs_backup.rs  quantum_extensions_demo.rs  quantum_search_demo.rs  synaptic_learning_demo.rs  tfim_quantum_annealing_demo.rs  vectored_io_demo.rs  wal_demo.rs
crates/neuroquantum-core/src/: concurrency.rs  dna.rs  error.rs  learning.rs  lib.rs  monitoring.rs  neon_optimization.rs  plasticity.rs  pqcrypto.rs  quantum.rs  quantum_processor.rs  query.rs  security.rs  spiking.rs  storage.rs  storage_tests.rs  synaptic.rs  tests.rs  transaction.rs
crates/neuroquantum-core/tests/: btree_compression_tests.rs  btree_node_tests.rs  chaos_engineering_tests.rs  cluster_e2e_tests.rs  concurrency_load_tests.rs  concurrent_transaction_integration_tests.rs  gcs_integration_test.rs  grover_hardware_backend_tests.rs  integration_tests.rs  integration_workflow_tests.rs  learning_tests.rs  neon_optimization_tests.rs  prometheus_tests.rs  quantum_tfim_integration_tests.rs  qubo_correctness_tests.rs  qubo_hardware_backend_tests.rs  qubo_quantum_tests.rs  security_tests.rs  simple_insert_test.rs  spiking_tests.rs  storage_encryption_integration_test.rs  stress_tests.rs  tfim_hardware_backend_tests.rs  transaction_recovery_tests.rs
crates/neuroquantum-qsql/: CHANGELOG.md  Cargo.toml
crates/neuroquantum-qsql/benches/: hash_join_performance.rs  qsql_functions.rs
crates/neuroquantum-qsql/examples/: hash_join_performance.rs  multi_row_insert.rs  test_compress_parse.rs  test_having.rs  test_recursive_cte_parse.rs  transaction_control.rs
crates/neuroquantum-qsql/proptest-regressions/: proptest_suite.txt
crates/neuroquantum-qsql/src/: ast.rs  error.rs  executor.rs  explain.rs  index_advisor.rs  lib.rs  natural_language.rs  optimizer.rs  parser.rs  prepared_statements.rs  proptest_suite.rs  query_plan.rs  query_plan_cache.rs  sql_engine_tests.rs  tests.rs
crates/neuroquantum-qsql/tests/: alter_table_tests.rs  ast_tests.rs  auto_increment_tests.rs  compress_table_tests.rs  default_values_tests.rs  error_tests.rs  explain_tests.rs  foreign_key_tests.rs  hash_join_tests.rs  having_clause_tests.rs  index_advisor_tests.rs  multi_row_insert_tests.rs  natural_language_tests.rs  neuromatch_issue_278_tests.rs  prepared_statements_tests.rs  query_plan_cache_tests.rs  query_plan_tests.rs  recursive_cte_tests.rs  savepoint_rollback_tests.rs  storage_integration_tests.rs  subquery_tests.rs  transaction_control_tests.rs  transaction_integration_tests.rs  truncate_table_tests.rs  window_function_tests.rs
crates/neuroquantum-wasm/: .gitignore  CHANGELOG.md  Cargo.toml  INTEGRATION.md  LICENSE  README.md  SUMMARY.md
crates/neuroquantum-wasm/examples/: README.md  browser-demo.html
crates/neuroquantum-wasm/src/: dna_compression.rs  lib.rs
python-integration-test/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
python-integration-test/src/: __init__.py  client.py  config.py  data_generator.py  data_loader.py  main.py  models.py  performance_test.py  query_tester.py
python-integration-test/tests/: test_basic_queries.py  test_neuromorphic_queries.py
tests/: .env.example  Cargo.toml  README.md  curl-test.md  db_health_check.sh  debug_health.sh  demo_tests.rs  integration_tests.rs  pyproject.toml  run_tests.rs  test.md  test_config.env  test_data.rs  test_data_generator.py  test_database.sh  test_database_corrected.sh  unit_tests.rs  wal_integration_tests.rs
(+75836 files in other folders)
