[workspace]
members = [
    "crates/neuroquantum-core",
    "crates/neuroquantum-qsql",
    "crates/neuroquantum-api",
    "crates/neuroquantum-cluster",
    "crates/neuroquantum-wasm",
    "scripts",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NeuroQuantumDB Team <team@neuroquantumdb.org>"]
license = "MIT"
repository = "https://github.com/neuroquantumdb/neuroquantumdb"
description = "Ultra-efficient neuromorphic database for edge computing"
keywords = ["database", "neuromorphic", "quantum", "edge-computing", "arm64"]

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.49.0", features = ["full", "tracing"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Logging and tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

# OpenTelemetry distributed tracing
opentelemetry = "0.27.1"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27.0", features = ["tonic", "tokio"] }
opentelemetry-semantic-conventions = "0.27.0"
tracing-opentelemetry = "0.28.0"

# UUID and time handling
uuid = { version = "1.19.0", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }

# Configuration
config = "0.15.19"

# Security - constant-time operations
subtle = "2.6"

# Test dependencies
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# CLI tools
clap = { version = "4.5.54", features = ["derive"] }

# Documentation tools
mdbook = "0.4"

# Linting and development tools
cargo-deny = "0.14.24"
cargo-machete = "0.6.2"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
dead_code = "deny"

[workspace.lints.clippy]
# Import all clippy rules from Cargo.toml.clippy
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# ============================================================================
# RESTRICTION LINTS - Maximale Code-Sicherheit (Issue #312)
# ============================================================================
# Debug-Code in Production verhindern
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

# Gefährliche Exit-Operationen
exit = "deny"

# Error Handling - explizite Behandlung erzwingen
unwrap_used = "deny"       # Kein unwrap() in Produktionscode
expect_used = "deny"       # Kein expect() in Produktionscode

# Sicherheitskritische Operationen
indexing_slicing = "warn"           # Bounds-checking erzwingen
arithmetic_side_effects = "warn"    # Overflow-Prüfung

# ============================================================================
# PERFORMANCE LINTS - Deny Level
# ============================================================================
needless_collect = "deny"
single_char_lifetime_names = "deny"
string_to_string = "deny"
string_slice_to_string = "deny"
clone_on_ref_ptr = "deny"

# ============================================================================
# CORRECTNESS LINTS - Deny Level
# ============================================================================
float_cmp = "deny"
mem_forget = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"

# ============================================================================
# STYLE LINTS - Deny Level für bessere Lesbarkeit
# ============================================================================
explicit_iter_loop = "deny"
manual_let_else = "deny"
needless_bool = "deny"
redundant_closure_for_method_calls = "deny"
semicolon_if_nothing_returned = "deny"
single_match_else = "deny"

# ============================================================================
# COMPLEXITY LINTS - Warn Level
# ============================================================================
cognitive_complexity = "warn"
too_many_arguments = "warn"
type_complexity = "warn"

# ============================================================================
# ALLOWED LINTS - Zu strikt für dieses Projekt
# ============================================================================
module_name_repetitions = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"

# ============================================================================
# PEDANTIC LINTS - Hochgestuft auf Deny (Issue #312)
# ============================================================================
# Cast-Sicherheit - DENY für sichere Typkonvertierungen
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
checked_conversions = "deny"

# Klon-Effizienz - DENY für Performance
implicit_clone = "deny"
inefficient_to_string = "deny"

# Pass-by-Value Optimierung - DENY
large_types_passed_by_value = "deny"
needless_pass_by_value = "deny"

# ============================================================================
# PEDANTIC LINTS - Warn Level (hohe Code-Qualität)
# ============================================================================
copy_iterator = "warn"
default_trait_access = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
items_after_statements = "warn"
large_stack_arrays = "warn"
manual_ok_or = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
match_wildcard_for_single_variants = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
no_effect_underscore_binding = "warn"
option_option = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
redundant_else = "warn"
ref_binding_to_reference = "warn"
ref_option_ref = "warn"
same_functions_in_if_condition = "warn"
trivially_copy_pass_by_ref = "warn"
unicode_not_nfc = "warn"
unnecessary_wraps = "warn"
unused_self = "warn"
used_underscore_binding = "warn"

# ============================================================================
# NURSERY LINTS - Experimentell aber nützlich
# ============================================================================
empty_line_after_outer_attr = "warn"
equatable_if_let = "warn"
mutex_integer = "warn"
redundant_pub_crate = "warn"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
incremental = true

[profile.dev.package."*"]
opt-level = 3  # Optimize dependencies even in dev mode

[profile.release]
opt-level = 3           # Maximum optimization
codegen-units = 1       # Better optimization, slower compile
lto = "fat"             # Full Link Time Optimization
panic = "abort"         # Smaller binary, no unwinding
strip = true            # Remove debug symbols
incremental = false     # No incremental compilation in release

[profile.release.package."*"]
opt-level = 3

[profile.bench]
opt-level = 3
debug = true
lto = "thin"            # Fast LTO for benchmarks
codegen-units = 1

# Production profile with maximum optimizations
[profile.production]
inherits = "release"
opt-level = "z"         # Optimize for size (Raspberry Pi)
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"



