[package]
name = "neuroquantum-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
neuroquantum-core = { path = "../crates/neuroquantum-core" }
neuroquantum-qsql = { path = "../crates/neuroquantum-qsql" }
neuroquantum-api = { path = "../crates/neuroquantum-api" }

# Test dependencies
tokio = { version = "1.47.1", features = ["full", "macros", "rt-multi-thread"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.99"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "run_tests"
path = "run_tests.rs"
