[tool.poetry]
name = "neuroquantumdb-tests"
version = "1.1.0"
description = "NeuroQuantumDB Enterprise Data Generator & Test Suite"
authors = ["NeuroQuantumDB Team <team@neuroquantumdb.com>"]
readme = "README.md"
packages = [{include = "test_data_generator.py"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
websockets = "^12.0"
faker = "^20.1.0"
asyncio = "^3.4.3"
argparse = "^1.4.0"
uuid = "^1.30"
json5 = "^0.9.14"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
aiohttp = "^3.9.1"
numpy = "^1.25.2"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
plotly = "^5.17.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
rich = "^13.7.0"
typer = "^0.9.0"
click = "^8.1.7"
httpx = "^0.25.2"
tenacity = "^8.2.3"
loguru = "^0.7.2"
pydantic = "^2.5.0"
schedule = "^1.2.1"
colorama = "^0.4.6"
tqdm = "^4.66.1"
pymongo = "^4.6.0"
elasticsearch = "^8.11.0"
kafka-python = "^2.0.2"
prometheus-client = "^0.19.0"
psutil = "^5.9.6"
memory-profiler = "^0.61.0"
line-profiler = "^4.1.1"
py-spy = "^0.3.14"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.6.0"
bandit = "^1.7.5"
safety = "^2.3.4"
pylint = "^3.0.3"
pytest-benchmark = "^4.0.0"
pytest-xdist = "^3.5.0"
coverage = "^7.3.2"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"

[tool.poetry.group.ml.dependencies]
tensorflow = "^2.15.0"
torch = "^2.1.1"
transformers = "^4.36.0"
scipy = "^1.11.4"
joblib = "^1.3.2"
xgboost = "^2.0.2"
lightgbm = "^4.1.0"
catboost = "^1.2.2"
optuna = "^3.4.0"

[tool.poetry.group.quantum.dependencies]
qiskit = "^0.45.1"
cirq = "^1.2.0"
pennylane = "^0.33.1"

[tool.poetry.group.bio.dependencies]
biopython = "^1.81"
dna-features-viewer = "^3.1.2"
primer3-py = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
neuroquantum-test = "test_data_generator:main"
generate-data = "test_data_generator:EnterpriseDataGenerator.generate_all_data"
run-tests = "test_data_generator:NeuroQuantumDBDataTester.run_all_tests"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
    "integration",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "neural: marks tests for neural network functionality",
    "quantum: marks tests for quantum computing features",
    "dna: marks tests for DNA compression features",
]

[tool.coverage.run]
source = ["test_data_generator"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
