[package]
name = "neuroquantum-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "NeuroQuantumDB REST API Server"

[dependencies]
# Local dependencies
neuroquantum-core = { path = "../neuroquantum-core" }

# Web framework
actix-web = "4.11.0"
actix-cors = "0.7.1"
actix-ws = "0.3.0"
actix-web-prometheus = "0.1.2"
futures-util = "0.3.31"

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# UUID and time
uuid.workspace = true
chrono = { workspace = true, features = ["serde"] }

# Security
bcrypt = "0.15"

# API documentation
utoipa = { version = "5.4.0", features = ["actix_extras"] }

# Configuration
toml = "0.9.6"

[features]
default = []
