[package]
name = "neuroquantum-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "NeuroQuantumDB REST API Server"

[dependencies]
# Local dependencies
neuroquantum-core = { path = "../neuroquantum-core" }

# Web framework
actix-web = "4.11.0"
actix-cors = "0.7.1"
actix-ws = "0.3.0"
actix-web-prometheus = "0.1.2"
futures-util = "0.3.31"

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# UUID and time
uuid.workspace = true
chrono = { workspace = true, features = ["serde"] }

# Security and authentication
bcrypt = "0.17.1"
jsonwebtoken = "9.3.1"
validator = { version = "0.19.0", features = ["derive"] }

# API documentation and OpenAPI
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }

# Rate limiting and caching
redis = { version = "0.32.1", features = ["tokio-comp", "connection-manager"] }
dashmap = "6.1.0"

# Configuration
config = "0.15.16"
toml = "0.9.7"

# Additional utilities
base64 = "0.22.1"
num_cpus = "1.17.0"

[features]
default = []
