[package]
name = "neuroquantum-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "NeuroQuantumDB REST API Server"

[dependencies]
# Local dependencies
neuroquantum-core = { path = "../neuroquantum-core" }
neuroquantum-qsql = { path = "../neuroquantum-qsql" }

# Web framework
actix-web = "4.12.1"
actix-cors = "0.7"
actix-ws = "0.3"
actix-web-prom = { version = "0.10", features = ["process"] }
futures-util = "0.3"

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# UUID and time
uuid.workspace = true
chrono = { workspace = true, features = ["serde"] }

# Security and authentication
bcrypt = "0.17"
jsonwebtoken = "9.3"
validator = { version = "0.20", features = ["derive"] }

# Post-quantum cryptography is provided by neuroquantum-core

# API documentation and OpenAPI
utoipa = { version = "5.4", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }

# HTTP client for health checks
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Rate limiting and caching
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
dashmap = "6.1"

# Configuration
config = "0.15.19"
toml = "0.9"

# Additional utilities
base64 = "0.22"
num_cpus = "1.17"
rand = "0.8"

# Prometheus metrics
prometheus = { version = "0.14.0", features = ["process"] }
once_cell = "1.21"
sysinfo = "0.37.2"

# Database for persistent storage
rusqlite = { version = "0.32", features = ["bundled"] }

# FFT for EEG signal processing
rustfft = "6.4"

# CLI
clap = { version = "4.5.54", features = ["derive"] }

[features]
default = []

[dev-dependencies]
tempfile = "3.23"
proptest = "1.9"
