[package]
name = "neuroquantum-cluster"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Distributed cluster management for NeuroQuantumDB with Raft consensus"
keywords = ["database", "distributed", "raft", "consensus", "cluster"]

[package.metadata.cargo-machete]
# These dependencies are used conditionally or reserved for future features
ignored = []

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true

# Internal crate dependency
neuroquantum-core = { path = "../neuroquantum-core" }

# Raft consensus implementation
openraft = { version = "0.9", features = ["serde", "tracing-log"] }

# gRPC for inter-node communication
tonic = "0.13"
prost = "0.13"

# Async traits and utilities
async-trait = "0.1.89"
futures = "0.3"

# Consistent hashing for data sharding
hashring = "0.3"

# Service discovery
hickory-resolver = "0.24"

# Metrics
prometheus = { version = "0.14", features = ["process"] }

# Serialization for network messages
bincode = "1.3"
bytes = "1.10"

# Backoff and retry logic
backon = "1"

[dev-dependencies]
tempfile = "3.23"
tokio-test = "0.4"

[build-dependencies]
tonic-build = "0.13"

[features]
default = []
