[package]
name = "neuroquantum-cluster"
version = "0.0.0" # x-release-please-version
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Distributed cluster management for NeuroQuantumDB with Raft consensus"
keywords = ["database", "distributed", "raft", "consensus", "cluster"]
categories = ["database", "network-programming"]

[package.metadata.cargo-machete]
# These dependencies are used conditionally or reserved for future features
# Some are used indirectly via re-exports or for type definitions
ignored = [
    "anyhow",
    "async-trait",
    "backon",
    "bytes",
    "chrono",
    "hashring",
    "neuroquantum-core",
    "openraft",
    "prometheus",
    "prost",
    "tonic-prost",
    "tracing-subscriber",
    "uuid",
]

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true

# Internal crate dependency
neuroquantum-core = { path = "../neuroquantum-core" }

# Raft consensus implementation
openraft = { version = "0.9", features = ["serde", "tracing-log"] }

# gRPC for inter-node communication
tonic = "0.14.2"
prost = "0.14.3"
tonic-prost = "0.14"

# Async traits and utilities
async-trait = "0.1.89"

# Consistent hashing for data sharding
hashring = "0.3"

# Service discovery
hickory-resolver = "0.24.4"
etcd-client = "0.14"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"

# Metrics
prometheus = { version = "0.14.0", features = ["process"] }

# Serialization for network messages
bincode = "1.3"
bytes = "1.11"

# Backoff and retry logic
backon = "1.6"

[dev-dependencies]
tempfile = "3.23"
tokio-test = "0.4"

[build-dependencies]
tonic-prost-build = "0.14.2"

[features]
default = []