[package]
name = "neuroquantum-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core neuromorphic database engine with DNA compression"
keywords = ["database", "neuromorphic", "dna-compression", "bioinformatics", "simd"]

[package.metadata.cargo-machete]
# These dependencies are used conditionally or reserved for future features
ignored = ["bitvec", "bytemuck", "flate2", "hashbrown", "lz4_flex", "wide"]

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

# DNA compression specific dependencies
reed-solomon-erasure = "6.0"
rayon = "1.8"
bitvec = "1.0"
hashbrown = "0.14"
crc32fast = "1.3"

# Missing dependencies for existing modules
rand.workspace = true
rand_distr = "0.4"
base64 = "0.22"

# Quantum computing - complex numbers for state vectors
num-complex = "0.4"

# SIMD and performance
wide = "0.7"
criterion = { version = "0.7.0", features = ["html_reports"], optional = true }

# Async traits
async-trait = "0.1"

# Compression algorithms for comparison
flate2 = "1.0"
lz4_flex = "0.11"

[dev-dependencies]
proptest = "1.4"
rand.workspace = true
tempfile = "3.8"
tokio-test = "0.4"

[features]
default = ["simd"]
simd = []
benchmarks = ["criterion"]
neon-optimizations = []

[[bench]]
name = "dna_compression"
harness = false
required-features = ["benchmarks"]

[[bench]]
name = "grover_search"
harness = false
required-features = ["benchmarks"]
